Add backgrounds, some aligning, test creation of flexboxes

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,22 @@
+.main-background-boxes {
+    display:flex;
+    flex-direction: column;
+}
+
+.header {
+    background-color: #1f2937;
+    display:flex;
+}
+
+.information-2 {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #e5e7eb;
+}
+
 img {
     max-height: 300px;
-    max-width: auto;
+    max-width: 300px;
 }
