--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 body {
     height: 100vh;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+ul {
+    list-style-type: none;
 }
 
 .main-background-boxes {
@@ -10,21 +15,25 @@ body {
 
 .header {
     background-color: #1f2937;
+    color:#e5e7eb;
+    font-size: 24px;
+    
     display:flex;
     justify-content:space-between;
     align-content: center;
-    padding: 1em;
-    
+    padding: 16px;
 }
+
 #logo-and-text {
     display:flex;
     flex-direction: column;
-    justify-content: center;
     align-items:center;
-    
 }
 
-
+.header-links {
+    display:flex;
+    gap: 1em;
+}
 
 .information-2 {
     display:flex;
