--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,13 @@ ul {
     flex-direction: column;
 }
 
+#title-pic {
+    max-height: 300px;
+    max-width: 300px;
+}
+
+/*------- Global Changes above ---------*/
+
 .header {
     background-color: #1f2937;
     color:#e5e7eb;
@@ -23,16 +30,42 @@ ul {
     align-content: center;
     padding: 16px;
 }
-
 #logo-and-text {
     display:flex;
     flex-direction: column;
     align-items:center;
 }
-
+#logo-pic {
+    height: 100px;
+    width: auto;
+    border-radius: 100%;
+}
 .header-links {
     display:flex;
     gap: 1em;
+}
+
+
+.title {
+    background-color: #1f2937;
+
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    padding:1em;
+}
+.title-information {
+    font-size:36px;
+    font-weight: bolder;
+    color:#e5e7eb;
+
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+button {
+    color:#3882f6;
 }
 
 .information-2 {
@@ -41,9 +74,4 @@ ul {
     justify-content: center;
     align-items: center;
     background-color: #e5e7eb;
-}
-
-img {
-    max-height: 300px;
-    max-width: 300px;
 }
