--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
 
 ul {
     list-style-type: none;
+    padding:0px;
 }
 
 .main-background-boxes {
@@ -13,18 +14,14 @@ ul {
     flex-direction: column;
 }
 
-#title-pic {
-    max-height: 300px;
-    max-width: 300px;
-}
-
 /*------- Global Changes above ---------*/
 
 .header {
     background-color: #1f2937;
     color:#e5e7eb;
-    font-size: 24px;
-    
+    font-size: 18px;
+    max-height:72px;
+
     display:flex;
     justify-content:space-between;
     align-content: center;
@@ -34,15 +31,18 @@ ul {
     display:flex;
     flex-direction: column;
     align-items:center;
+    font-weight: bold;
 }
 #logo-pic {
-    height: 100px;
+    max-height: 50px;
     width: auto;
-    border-radius: 100%;
+    border-radius: 50%;
 }
 .header-links {
     display:flex;
     gap: 1em;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -62,10 +62,18 @@ ul {
     display:flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-items: center;
 }
 button {
     color:#3882f6;
+    height:50px;
+    min-width: 50px;
+    font-family: 'Franklin Gothic Medium', Arial, sans-serif;
+    font-weight: 600;
+}
+#title-pic {
+    max-height: 300px;
+    max-width: 300px;
 }
 
 .information-2 {
