--- a/styles.css
+++ b/styles.css
@@ -97,8 +97,8 @@ button {
     padding: 1em;
 }
 .pug-pics {
-    height: 100px;
-    width: 100px;
+    height: 150px;
+    width: auto;
 }
 
 .information-3 {
@@ -107,4 +107,11 @@ button {
     justify-content: center;
     align-items: center;
     background-color: #e5e7eb;
+}
+
+.footer {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    padding: .5em;
 }
