--- a/styles.css
+++ b/styles.css
@@ -67,9 +67,10 @@ ul {
 button {
     color:#3882f6;
     height:50px;
-    min-width: 50px;
+    min-width: 100px;
     font-family: 'Franklin Gothic Medium', Arial, sans-serif;
     font-weight: 600;
+    font-size: 16px;
 }
 #title-pic {
     max-height: 300px;
@@ -80,6 +81,7 @@ button {
     color:#1F2937;
     font-weight:bolder;
     font-size: 36px;
+    padding: .5em;
 
     display:flex;
     align-items: center;
@@ -99,6 +101,7 @@ button {
 .pug-pics {
     height: 150px;
     width: auto;
+    border-radius: 25px;
 }
 
 .information-3 {
@@ -106,12 +109,26 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #e5e7eb;
+}
+
+.information-4 {
+    font-weight: bold;
+    color:#32
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #7da3ed;
+    margin: 1em;
 }
 
 .footer {
+    background-color: #1f2937;
+    color:#e5e7eb;
+    font-size: 16px;
+    max-height:60px;
+
     display:flex;
+    align-content: center;
     justify-content: center;
-    align-items: center;
-    padding: .5em;
+    padding: 16px;
 }
