--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,15 @@ ul {
     flex-direction: column;
 }
 
+button {
+    background-color: #3882f6;
+    font-size: 16px;
+    color:#e5e7eb;
+    border-radius: 25%;
+    border-color: #e5e7eb;
+    
+}
+
 /*------- Global Changes above ---------*/
 
 .header {
@@ -45,7 +54,6 @@ ul {
     align-items: center;
 }
 
-
 .title {
     background-color: #1f2937;
 
@@ -64,14 +72,7 @@ ul {
     align-items: center;
     justify-items: center;
 }
-button {
-    color:#3882f6;
-    height:50px;
-    min-width: 100px;
-    font-family: 'Franklin Gothic Medium', Arial, sans-serif;
-    font-weight: 600;
-    font-size: 16px;
-}
+
 #title-pic {
     max-height: 300px;
     max-width: 300px;
@@ -113,12 +114,14 @@ button {
 
 .information-4 {
     font-weight: bold;
-    color:#32
+    background-color:#3882fc;
     display:flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #7da3ed;
+    color:#e5e7eb;
     margin: 1em;
+    border-radius: 15px;
+    padding: 1em;
 }
 
 .footer {
