--- a/styles.css
+++ b/styles.css
@@ -106,10 +106,16 @@ button {
 }
 
 .information-3 {
+    background-color:#E5e7eb;
+    font-style: italic;
+    font-size: 36px;
+    color:#1f2937;
+
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding:2em;
 }
 
 .information-4 {
